--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="row">
-        <div class="col-3 m-2 bg-light">
+        <div class="col-3 m-2 bg-light" style="height:30rem;">
             <h3>Search for a city:</h3>
             
             <form class="example" action="action_page.php">
@@ -27,8 +27,16 @@
         <div class="card" style="width: 50rem; height: 20rem;">
         <ul id="city-list" class="list-group list-group=flush">
 
-
         </ul>
+        </div>
+
+        <div class="col-8 m-2">
+
+            <div class="row-12" id="row-two">
+                <div class="card">
+                    <div id="today-weather" class="card-body"></div>
+                </div>
+            </div>
         </div>
 
 
